--- a/components/MobileItemSlider.module.css
+++ b/components/MobileItemSlider.module.css
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 60px;
+  height: 50px;
   border-bottom: 1px solid var(--mantine-color-gray-3);
   background-color: var(--mantine-color-body);
   z-index: 100;
